fix-z-index

--- a/src/css/components/latest-post.scss
+++ b/src/css/components/latest-post.scss
@@ -86,7 +86,7 @@
             opacity: 0;
             -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=0)";
             filter: alpha(opacity=0);
-            z-index: 2;
+            z-index: 1;
             -webkit-transition: all 0.5s ease;
             -moz-transition: all 0.5s ease;
             -ms-transition: all 0.5s ease;
