--- a/src/css/components/lookbook-custom.scss
+++ b/src/css/components/lookbook-custom.scss
@@ -1,4 +1,7 @@
 .wa-lookbook-custom {
+.wa-ella-carousel-item-image-button{
+	    z-index: 1 !important;
+}
   .row-sm {
     display: grid;
     // gap: 15px;
