--- a/src/css/components/parallax/parallax.scss
+++ b/src/css/components/parallax/parallax.scss
@@ -28,7 +28,7 @@
         .banner-content{
             position: absolute;
             top: 50%;
-            z-index: 2;
+            z-index: 1;
             left: calc((100% - 1200px)/2);
             transform: translateY(-50%);
             text-align: center;
@@ -255,7 +255,7 @@
         overflow: hidden;
         opacity: 0;
         filter: alpha(opacity=0);
-        z-index: 2;
+        z-index: 1;
         -webkit-transition: all 0.5s ease;
         -moz-transition: all 0.5s ease;
         -ms-transition: all 0.5s ease;
@@ -315,7 +315,7 @@
         .banner-content{
             position: absolute;
             top: 50%;
-            z-index: 2;
+            z-index: 1;
             left: calc((100% - 1200px)/2);
             transform: translateY(-50%);
             text-align: center;
@@ -474,7 +474,7 @@
         .banner-content{
             position: absolute;
             top: 50%;
-            z-index: 2;
+            z-index: 1;
             left: 50%;
             transform: translate(-50%, -50%);
             text-align: center;
